--- a/MyBookList/Views/Game/Index.cshtml
+++ b/MyBookList/Views/Game/Index.cshtml
@@ -21,14 +21,14 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td style="width:80px;text-align:center"><img id="image" src='@Url.Action("ShowMini", "Image", new { id = item.ImageId})' height="100" width="70" /></td>
-                <th>@Html.ActionLink(item.Title, "Details", "Game", new { id = item.Id }, null)</th>
-                <td>@item.AverageScore</td>
-                <th>@item.Studio</th>
-                <th>@item.ReleaseDate.ToString("MM/dd/yyyy")</th>
-                <th>@item.GenreName</th>
-            </tr>
+        <tr>
+            <td style="width:80px;text-align:center"><img id="image" src='@Url.Action("ShowMini", "Image", new { id = item.ImageId})' height="100" width="70" /></td>
+            <th>@Html.ActionLink(item.Title, "Details", "Game", new { id = item.Id }, null)</th>
+            <td>@Math.Round(item.AverageScore, 1)</td>
+            <th>@item.Studio</th>
+            <th>@item.ReleaseDate.ToString("MM/dd/yyyy")</th>
+            <th>@item.GenreName</th>
+        </tr>
         }
     </tbody>
 </table>
