--- a/MyBookList/Views/Book/Index.cshtml
+++ b/MyBookList/Views/Book/Index.cshtml
@@ -25,7 +25,7 @@
             <tr>
                 <td style="width:80px;text-align:center"><img id="image" src='@Url.Action("ShowMini", "Image", new { id = item.ImageId})' height="100" width="70" /></td>
                 <td>@Html.ActionLink(item.Title, "Details", "Book", new { id = item.Id }, null)</td>
-                <td>@item.AverageScore</td>
+                <td>@Math.Round(item.AverageScore, 1)</td>
                 <td>@item.Author</td>
                 <td>@item.ReleaseDate.ToString("MM/dd/yyyy")</td>
                 <td>@item.GenreName</td>
