--- a/MyBookList/Views/Game/Details.cshtml
+++ b/MyBookList/Views/Game/Details.cshtml
@@ -5,8 +5,8 @@
 
     var user = Request.IsAuthenticated;
     var isUserActive = user && (MyHobbyList.Models.AccountState)ViewBag.IsBanned == MyHobbyList.Models.AccountState.Active ? true : false;
-    var isOwner = (bool)ViewBag.IsOwner;
-    var alreadyAdded = (bool)ViewBag.AlreadyAdded;
+    var isOwner = ViewBag.IsOwner != null ? (bool)ViewBag.IsOwner : false;
+    var alreadyAdded = ViewBag.AlreadyAdded != null ? (bool)ViewBag.AlreadyAdded : false;
 
     var admin = this.User.IsInRole("Admin");
 }
