Entities edit fix and login credentials

--- a/MyBookList/Views/Account/Login.cshtml
+++ b/MyBookList/Views/Account/Login.cshtml
@@ -56,6 +56,10 @@
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
         </section>
     </div>
+    <div style="background-color: red;opacity:0.9;color:blue;position:absolute;right:20px;bottom:30px;width:220px;padding:20px" class="jumbotron">
+        <p>Admin account: Login: Admin@gmail.com password: Admin123.</p>
+        <p>User account: Login: User@gmail.com password: User123.</p>
+    </div>
 </div>
 
 @section Scripts {
